p2 dựng base dự án

--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Reset -->
+    <link rel="stylesheet" href="assets/css/reset.css" />
+
+    <!-- Style -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+
+    <link rel="stylesheet" href="style.css" />
     <title>Figma to HTMl</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Figma to HTML</h1>
+  </body>
 </html>
